--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "vue": "latest",
     "vue-router": "latest",
     "xmldom": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@vercel/analytics": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^22",
